assignment1/src/main/d96/parser/.antlr/BKITParser.py
# Generated from c:\THANH\BK\NGUYEN LY NGON NGU LAP TRINH\assignment\assignment1\src\main\d96\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'printLn'", "'print'", "'printStrLn'", 
                     "'read'", "'int_of_float'", "'float_to_int'", "'int_of_string'", 
                     "'string_of_int'", "'float_of_string'", "'string_of_float'", 
                     "'bool_of_string'", "'string_of_bool'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Body'", "'Break'", 
                     "'Continue'", "'Do'", "'Else'", "'ElseIf'", "'EndBody'", 
                     "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", "'Function'", 
                     "'If'", "'Parameter'", "'Return'", "'Then'", "'Var'", 
                     "'While'", "'True'", "'False'", "'EndDo'", "'+'", "'-'", 
                     "'*'", "'\\'", "'%'", "'+.'", "'-.'", "'*.'", "'\\.'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "'('", "')'", "'['", "']'", "':'", "'.'", "','", "';'", 
                     "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "COMMENT", "IDENTIFIER", "BOOLEAN", 
                      "BODY", "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", 
                      "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "THEN", "VAR", "WHILE", 
                      "TRUE", "FALSE", "ENDDO", "PLUS", "MINUS", "MUL", 
                      "DIV", "REM", "FLOAT_PLUS", "FLOAT_MINUS", "FLOAT_MUL", 
                      "FLOAT_DIV", "NEG", "CONJ", "DISJ", "EQEQ", "NOTEQEQ", 
                      "LESS", "GREATER", "LESSOREQ", "GREATEROREQ", "FLOAT_NOTEQEQ", 
                      "FLOAT_LESS", "FLOAT_GREATER", "FLOAT_LESSOREQ", "FLOAT_GREATEROREQ", 
                      "LP", "RP", "LSB", "RSB", "COLON", "DOT", "COMMA", 
                      "SEMICOLON", "LCB", "RCB", "EQUAL", "INTEGER", "FLOAT", 
                      "STRING", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_func_dec = 1
    RULE_param_dec = 2
    RULE_param_list = 3
    RULE_param = 4
    RULE_body = 5
    RULE_stmt = 6
    RULE_ele_expr = 7
    RULE_idx_op = 8
    RULE_func_call = 9
    RULE_argument_list = 10
    RULE_expr = 11
    RULE_integer_expr = 12
    RULE_float_expr = 13
    RULE_boolean_expr = 14
    RULE_type_coer_func = 15
    RULE_var_dec_stmt = 16
    RULE_var_list = 17
    RULE_var = 18
    RULE_dimension = 19
    RULE_ass_stmt = 20
    RULE_if_stmt = 21
    RULE_for_stmt = 22
    RULE_init_expr = 23
    RULE_condition_expr = 24
    RULE_update_expr = 25
    RULE_while_stmt = 26
    RULE_do_while_stmt = 27
    RULE_break_stmt = 28
    RULE_continue_stmt = 29
    RULE_call_stmt = 30
    RULE_return_stmt = 31
    RULE_array = 32
    RULE_literal = 33

    ruleNames =  [ "program", "func_dec", "param_dec", "param_list", "param", 
                   "body", "stmt", "ele_expr", "idx_op", "func_call", "argument_list", 
                   "expr", "integer_expr", "float_expr", "boolean_expr", 
                   "type_coer_func", "var_dec_stmt", "var_list", "var", 
                   "dimension", "ass_stmt", "if_stmt", "for_stmt", "init_expr", 
                   "condition_expr", "update_expr", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "call_stmt", "return_stmt", 
                   "array", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    WS=13
    COMMENT=14
    IDENTIFIER=15
    BOOLEAN=16
    BODY=17
    BREAK=18
    CONTINUE=19
    DO=20
    ELSE=21
    ELSEIF=22
    ENDBODY=23
    ENDIF=24
    ENDFOR=25
    ENDWHILE=26
    FOR=27
    FUNCTION=28
    IF=29
    PARAMETER=30
    RETURN=31
    THEN=32
    VAR=33
    WHILE=34
    TRUE=35
    FALSE=36
    ENDDO=37
    PLUS=38
    MINUS=39
    MUL=40
    DIV=41
    REM=42
    FLOAT_PLUS=43
    FLOAT_MINUS=44
    FLOAT_MUL=45
    FLOAT_DIV=46
    NEG=47
    CONJ=48
    DISJ=49
    EQEQ=50
    NOTEQEQ=51
    LESS=52
    GREATER=53
    LESSOREQ=54
    GREATEROREQ=55
    FLOAT_NOTEQEQ=56
    FLOAT_LESS=57
    FLOAT_GREATER=58
    FLOAT_LESSOREQ=59
    FLOAT_GREATEROREQ=60
    LP=61
    RP=62
    LSB=63
    RSB=64
    COLON=65
    DOT=66
    COMMA=67
    SEMICOLON=68
    LCB=69
    RCB=70
    EQUAL=71
    INTEGER=72
    FLOAT=73
    STRING=74
    UNCLOSE_STRING=75
    ILLEGAL_ESCAPE=76
    UNTERMINATED_COMMENT=77
    ERROR_CHAR=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_dec_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_dec_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_dec_stmtContext,i)


        def func_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_decContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 68
                self.var_dec_stmt()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 74
                self.func_dec()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def param_dec(self):
            return self.getTypedRuleContext(BKITParser.Param_decContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_dec




    def func_dec(self):

        localctx = BKITParser.Func_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(BKITParser.FUNCTION)
            self.state = 83
            self.match(BKITParser.COLON)
            self.state = 84
            self.match(BKITParser.IDENTIFIER)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 85
                self.param_dec()


            self.state = 88
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param_dec




    def param_dec(self):

        localctx = BKITParser.Param_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_param_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(BKITParser.PARAMETER)
            self.state = 91
            self.match(BKITParser.COLON)
            self.state = 92
            self.param_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParamContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_param_list




    def param_list(self):

        localctx = BKITParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.param()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 95
                self.match(BKITParser.COMMA)
                self.state = 96
                self.param()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param




    def param(self):

        localctx = BKITParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(BKITParser.IDENTIFIER)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.LSB:
                self.state = 103
                self.dimension()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def var_dec_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_dec_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_dec_stmtContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmtContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_body




    def body(self):

        localctx = BKITParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BKITParser.BODY)
            self.state = 107
            self.match(BKITParser.COLON)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 108
                self.var_dec_stmt()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.T__0) | (1 << BKITParser.T__1) | (1 << BKITParser.T__2) | (1 << BKITParser.T__3) | (1 << BKITParser.T__4) | (1 << BKITParser.T__5) | (1 << BKITParser.T__6) | (1 << BKITParser.T__7) | (1 << BKITParser.T__8) | (1 << BKITParser.T__9) | (1 << BKITParser.T__10) | (1 << BKITParser.T__11) | (1 << BKITParser.IDENTIFIER) | (1 << BKITParser.DO) | (1 << BKITParser.FOR) | (1 << BKITParser.IF) | (1 << BKITParser.RETURN) | (1 << BKITParser.WHILE))) != 0):
                self.state = 114
                self.stmt()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(BKITParser.ENDBODY)
            self.state = 121
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ass_stmt(self):
            return self.getTypedRuleContext(BKITParser.Ass_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKITParser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(BKITParser.Do_while_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKITParser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt




    def stmt(self):

        localctx = BKITParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.ass_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.for_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.do_while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 128
                self.call_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 129
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ele_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def idx_op(self):
            return self.getTypedRuleContext(BKITParser.Idx_opContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_ele_expr




    def ele_expr(self):

        localctx = BKITParser.Ele_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ele_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.expr()
            self.state = 133
            self.idx_op()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idx_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def integer_expr(self):
            return self.getTypedRuleContext(BKITParser.Integer_exprContext,0)


        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def idx_op(self):
            return self.getTypedRuleContext(BKITParser.Idx_opContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_idx_op




    def idx_op(self):

        localctx = BKITParser.Idx_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idx_op)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(BKITParser.LSB)
                self.state = 136
                self.integer_expr(0)
                self.state = 137
                self.match(BKITParser.RSB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(BKITParser.LSB)
                self.state = 140
                self.integer_expr(0)
                self.state = 141
                self.match(BKITParser.RSB)
                self.state = 142
                self.idx_op()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def argument_list(self):
            return self.getTypedRuleContext(BKITParser.Argument_listContext,0)


        def type_coer_func(self):
            return self.getTypedRuleContext(BKITParser.Type_coer_funcContext,0)


        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_call




    def func_call(self):

        localctx = BKITParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(BKITParser.IDENTIFIER)
                self.state = 147
                self.match(BKITParser.LP)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.T__0) | (1 << BKITParser.T__1) | (1 << BKITParser.T__2) | (1 << BKITParser.T__3) | (1 << BKITParser.T__4) | (1 << BKITParser.T__5) | (1 << BKITParser.T__6) | (1 << BKITParser.T__7) | (1 << BKITParser.T__8) | (1 << BKITParser.T__9) | (1 << BKITParser.T__10) | (1 << BKITParser.T__11) | (1 << BKITParser.IDENTIFIER) | (1 << BKITParser.BOOLEAN) | (1 << BKITParser.MINUS) | (1 << BKITParser.FLOAT_MINUS) | (1 << BKITParser.NEG) | (1 << BKITParser.LP))) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & ((1 << (BKITParser.INTEGER - 72)) | (1 << (BKITParser.FLOAT - 72)) | (1 << (BKITParser.STRING - 72)))) != 0):
                    self.state = 148
                    self.argument_list()

